--- a/package.json
+++ b/package.json
@@ -15,11 +15,20 @@
     "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-encrypted-storage": "^4.0.2",
+    "react-native-flipper": "^0.140.0",
+    "react-native-platform-searchbar": "^1.2.3",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-safe-area-context": "^4.1.2",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-flipper": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -27,6 +36,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
