--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-native": "0.67.3",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-flipper": "^0.140.0",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-platform-searchbar": "^1.2.3",
     "react-native-popup-menu": "^0.15.12",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-webview": "^11.17.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-flipper": "^2.0.1"
